--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,11 +6,18 @@
   "scripts": {
     "start": "nodemon --exec babel-node src/index",
     "build": "babel src -d build",
-    "lint": "eslint --fix *.js src"
+    "lint": "eslint --fix *.js src",
+    "precommit": "lint-staged"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "lint-staged": {
+    "**/*.js": [
+      "npm run lint",
+      "git add"
+    ]
+  },
   "dependencies": {
     "express": "^4.17.1"
   },
@@ -22,6 +29,7 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.1",
+    "lint-staged": "^10.0.7",
     "nodemon": "^2.0.2"
   }
 }
