--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -19,7 +19,9 @@
     ]
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
