--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -27,6 +27,7 @@
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.1",
+    "mongoose-deep-populate": "^3.1.1",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
