--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,13 +21,13 @@
   "dependencies": {
     "@hapi/joi": "^17.1.0",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.1",
-    "mongoose-deep-populate": "^3.1.1",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
