--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "immer": "^5.3.6",
+    "jwt-decode": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.0",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
